# moveit2_test

./: .gitmodules  README.md  output.txt
.github/workflows/: build.yml  full_build.yml  incremental_build.yml
dev_ws/: .gitignore
dev_ws/robot/: CMakeLists.txt  package.xml  test.launch.py
dev_ws/robot/launch/: test.launch.py
dev_ws/robot/src/: Robot.cpp  Robot.hpp  node.cpp
dev_ws/robot/urdf/: model.config  robot.srdf  robot.urdf  robot_w_balljoint.urdf
dev_ws/robot_controller/: CMakeLists.txt  README.md  package.xml
dev_ws/robot_controller/src/: RobotController.cpp  RobotController.hpp  node.cpp  test_RobotController.cpp
dev_ws/robot_hw_interface/: CMakeLists.txt  package.xml
dev_ws/robot_hw_interface/src/: Connection.hpp  RobotHwInterface.cpp  RobotHwInterface.hpp  node.cpp  test_RobotHwInterface.cpp
dev_ws/robot_msgs/: CMakeLists.txt  package.xml
dev_ws/robot_msgs/msg/: PointTrajectory.msg
dev_ws/robot_planner/: CMakeLists.txt  README.md  package.xml  test.rviz
dev_ws/robot_planner/launch/: ign_simulation.launch.py  test.launch.py
dev_ws/robot_planner/src/: RobotPlanner.cpp  RobotPlanner.hpp  node.cpp  test_RobotPlanner.cpp
dev_ws/robot_planner/urdf/: kinematics.yaml  robot.sdf  robot.srdf  robot.urdf  robot_w_balljoint.srdf
dev_ws/src/robot/: CMakeLists.txt  package.xml
dev_ws/src/robot/include/: Connection.h
dev_ws/src/robot/src/: node.cpp  test_Robot.cpp
dev_ws/trajectory_file_reader/: README.md  package.xml  setup.cfg  setup.py
dev_ws/trajectory_file_reader/launch/: main.launch.py
dev_ws/trajectory_file_reader/trajectory_file_reader/: trajectory_file_reader_node.py
docker/: base.Dockerfile  build.Dockerfile  moveit.Dockerfile
resources/: demo.mkv
